# group10-IoT-project

./: README.md  lambda-s3-trigger.py
CloudserverGateway/: pub.py  sub.py
CloudserverGateway/ESP32_C6/main/: CMakeLists.txt  README.md  app_main.c
CloudserverGateway/http/: commands.txt  flask_server.py  server.py
CloudserverGateway/mqtt/: client.py  mosquitto.txt  pub.py  sub.py
CloudserverGateway/mqtt/ciaran-keys/: e882d03186b8dd480a5d7a14ba7323da7f5e9f3be69a6582e516cd8d7b83e022-certificate.pem.crt  e882d03186b8dd480a5d7a14ba7323da7f5e9f3be69a6582e516cd8d7b83e022-private.pem.key  e882d03186b8dd480a5d7a14ba7323da7f5e9f3be69a6582e516cd8d7b83e022-public.pem.key
blecent/: sdkconfig  sdkconfig.old
blecent/main/: main.c
bleprph/: sdkconfig  sdkconfig.old
bleprph/main/: gatt_svr.c  idf_component.yml  main.c
camera_example/main/: CMakeLists.txt  idf_component.yml  take_picture.c
final_code/: CMakeLists.txt  sdkconfig  sdkconfig.old
final_code/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  http_client_camera.c  http_client_camera.h
isabel-app/: package-lock.json  package.json
isabel-app/amplify/: team-provider-info.json
isabel-app/src/: App.js  index.js
kaluga_lcd/: CMakeLists.txt  convert_jpeg.py  sdkconfig  sdkconfig.old
kaluga_lcd/main/: CMakeLists.txt  Kconfig.projbuild  main.c
kaluga_lcd/spiffs_image/: face_detect.rgb565
robobouncer/: package.json
upload-image-app/: .graphqlconfig.yml  package-lock.json  package.json
upload-image-app/amplify/: team-provider-info.json
upload-image-app/src/: App.js  index.css  index.js
web_2/: sdkconfig  sdkconfig.old
web_2/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  http_client_camera.c  http_client_camera.h
web_21/: sdkconfig  sdkconfig.defaults  sdkconfig.old
web_21/main/: CMakeLists.txt  app_main.cpp  http_client_camera.c  http_client_camera.h
web_https/main/: CMakeLists.txt  app_main.cpp  cert.pem  http_client_camera.c  http_client_camera.h  idf_component.yml
(+32 files in other folders)
